chromeos: Fix potential crash in SessionManagerClient

ErrorResponse can be null when an error happens locally.
Also, this logging is unnecessary as ObjectProxy::CallMethod is already
doing that.

BUG=642241

Review-Url: https://codereview.chromium.org/2291453006
Cr-Commit-Position: refs/heads/master@{#415591}

Former-commit-id: b159d73f7098b1d36aff32c4ff593495a3c710b7